# swap-and-forward

./: .gitignore  Cargo.toml  NOTICE  build.sh
.cargo/: config.toml
artifacts/: swap_and_forward.wasm
contracts/astroport/: Cargo.toml
contracts/astroport/.cargo/: config.toml
contracts/astroport/src/: astroport.rs  contract.rs  lib.rs  state.rs
contracts/astroport/src/interfaces/: mod.rs  splitter_interface.rs  swap_and_forward_interface.rs
contracts/astroport/src/testing/: tests.rs
contracts/osmosis/: Cargo.toml
contracts/osmosis/src/: contract.rs  lib.rs  osmosis.rs  state.rs
contracts/osmosis/src/interfaces/: app_interface.rs  mod.rs  splitter_interface.rs  swap_and_forward_interface.rs
contracts/osmosis/src/testing/: tests.rs
src/: astroport.rs  contract.rs  lib.rs  msg.rs  state.rs
src/interfaces/: adodb_interface.rs  app_interface.rs  mod.rs  splitter_interface.rs  swap_and_forward_interface.rs
src/testing/: tests.rs
