[workspace]
members = [
  "contracts/*",
  "packages"
]
resolver = "2"

[profile.release]
opt-level = 'z'
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
andromeda-swap-and-forward = { path = "./packages", default-features = false }
cosmwasm-schema = "1.5.0"
cosmwasm-std = { version = "1.5.0", features = [
  "cosmwasm_1_3",
  # Enable this if you only deploy to chains that have CosmWasm 1.4 or higher
  # "cosmwasm_1_4",
] }
cw-storage-plus = "1.1.0"
cw2 = "1.1.1"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
cw-utils = "0.14.0"
andromeda-std = {git = "https://github.com/andromedaprotocol/andromeda-core", package = "andromeda-std", branch = "development"}
cw20 = "1.1.2"
astroport = { git = "https://github.com/astroport-fi/astroport-core" } 
andromeda-app = {git = "https://github.com/andromedaprotocol/andromeda-core", package = "andromeda-app", branch = "development"}
andromeda-finance = {git = "https://github.com/andromedaprotocol/andromeda-core", package = "andromeda-finance", branch = "development"}
swaprouter = { git = "https://github.com/osmosis-labs/osmosis", package = "swaprouter", features = ["imported"] } 
osmosis-std="0.16.2"
dotenv = "0.15.0"
env_logger = "0.11.5"
cosmrs = { version = "0.15.0", features = ["cosmwasm"]}
serde_json = "1.0.132"
cw-orch = "0.24.1"
cw-orch-daemon = "0.24.2"
