[package]
name = "swap-and-forward-astroport"
version = "0.2.0"
authors = ["cowboy0015 <web3pirate@outlook.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.16.0
"""

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = "0.8.16"
serde = { workspace = true }
thiserror = { workspace = true }
cw-utils = { workspace = true }

andromeda-std = { workspace = true }
cw20 = "1.1.2"
astroport = { workspace = true }
andromeda-swap-and-forward = { workspace = true }

[dev-dependencies]
andromeda-app = { workspace = true }
andromeda-finance = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
cosmrs = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cw-orch = { workspace = true }
cw-orch-daemon = { workspace = true }