[package]
name = "swap-and-forward-osmosis"
version = "0.2.0"
edition = "2021"

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = "0.8.16"
serde = { workspace = true }
thiserror = { workspace = true }
cw-utils = { workspace = true }

andromeda-std = { workspace = true }
swaprouter = { workspace = true }
andromeda-swap-and-forward = { workspace = true }

[dev-dependencies]
andromeda-app = { workspace = true }
andromeda-finance = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
cosmrs = { workspace = true }
serde_json = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
cw-orch = { workspace = true }
cw-orch-daemon = { workspace = true }